filling db from file logic completed and tested